<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="head">cestbelt monitor</string>
    <string name="app_name">EKG Gürtel</string>
    <string name="btnRescanText">Scan for cestbelt</string>
    <string name="btnShowPairedText">Show paired devices</string>
    <string name="btnPing">send Ping</string>
    <string name="btnVersion">request cestbelt version</string>
    <string name="btnReset">reset cestbelt</string>
    <string name="btnBuzzer">buzzzzzzzz</string>
    <string name="txtDev">used device:</string>
    <string name="btnConnect">connect to cestbelt</string>
    <string name="btnPulse">view pulse</string>
    <string name="activityPulse">pulsemeter</string>
    <string name="textCurrentPulse">current pulse:</string>
    <string name="btnDisconnect">close connection</string>
    <string name="txtPulse">current pulse:</string>
    
</resources>
