<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="fill_parent" android:layout_width="match_parent">
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/head" 
    android:gravity="center_vertical|center_horizontal"
    android:textSize="20px"
 	android:textStyle="bold"
 	android:textColor="#00ff00"
    />
<TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/txtDev" android:text="@string/txtDev"></TextView>
<Button 
	android:layout_width="match_parent" 
	android:layout_height="wrap_content" 
	android:id="@+id/btnConnect" android:text="@string/btnConnect"/>
<Button 
	android:layout_width="match_parent" 
	android:layout_height="wrap_content"
	android:id="@+id/btnRescan" 
	android:text="@string/btnRescanText"
	/>
<Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/btnPing" android:text="@string/btnPing"></Button>
<Button android:layout_height="wrap_content" android:id="@+id/btnVersion" android:layout_width="match_parent" android:text="@string/btnVersion"></Button>
<Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/btnReset" android:text="@string/btnReset"></Button>
<Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/btnBuzzer" android:text="@string/btnBuzzer"></Button>
<Button android:layout_height="wrap_content" android:text="@string/btnPulse" android:layout_width="match_parent" android:id="@+id/btnPulseActivity"></Button>
	
</LinearLayout>
